# pipewire-web-remote

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  PKGBUILD-bin  README.md  README_kr.md  build.rs  pipewire-web-remote.install
.github/workflows/: check.yml  release.yml
src/: cli.rs  main.rs  systemd.rs
src/api/: devices.rs  graph.rs  mod.rs  presets.rs  websocket.rs
src/audio/: controller.rs  mod.rs  pipewire.rs
src/graph/: manager.rs  mod.rs  preset.rs
src/models/: device.rs  graph.rs  mod.rs
src/utils/: assets.rs  broadcast.rs  logger.rs  mod.rs
systemd/: pipewire-web-remote.service
web/: app.js  index.html  manifest.json
web/components/: graph-canvas.js  rete-graph.js  slider.js
web/lib/: api.js
web/views/: patchbay.js  presets.js  setup.js  volume.js
