[package]
name = "pipewire-web-remote"
version = "0.2.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Web Framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Static Asset Embedding
rust-embed = "8.5"
mime_guess = "2.0"

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Concurrency
parking_lot = "0.12"
crossbeam-channel = "0.5"

# System
dirs = "5.0"

# PipeWire
pipewire = "0.8"
libspa = "0.8"
